--- a/UR_playground_mainwindow.ui
+++ b/UR_playground_mainwindow.ui
@@ -494,16 +494,6 @@
      </property>
     </widget>
    </widget>
-   <widget class="QOpenGLWidget" name="Preview">
-    <property name="geometry">
-     <rect>
-      <x>380</x>
-      <y>30</y>
-      <width>411</width>
-      <height>401</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
@@ -584,6 +574,16 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="text">
      <string>Log</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="widgetPreview" native="true">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>30</y>
+      <width>411</width>
+      <height>401</height>
+     </rect>
     </property>
    </widget>
   </widget>
