--- a/UR_playground_mainwindow03.ui
+++ b/UR_playground_mainwindow03.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1147</width>
-    <height>831</height>
+    <width>880</width>
+    <height>716</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -430,7 +430,7 @@
               <item row="4" column="2">
                <widget class="QLabel" name="label_23">
                 <property name="text">
-                 <string>%</string>
+                 <string>mm</string>
                 </property>
                </widget>
               </item>
@@ -567,7 +567,7 @@
                  <set>Qt::ImhDigitsOnly</set>
                 </property>
                 <property name="text">
-                 <string>0</string>
+                 <string>100</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -611,7 +611,7 @@
                  <set>Qt::ImhDigitsOnly</set>
                 </property>
                 <property name="text">
-                 <string>0</string>
+                 <string>5</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
